--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "just-tech-news",
+  "name": "hacker-news-clone",
   "version": "1.0.0",
-  "description": "Lesson 13 of our bootcamp, a news site with a coding theme. Our first exposure to ORM",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js",
     "seeds": "node seeds/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mmlawton15/just-tech-news.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mmlawton15/just-tech-news/issues"
-  },
-  "homepage": "https://github.com/mmlawton15/just-tech-news#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "connect-session-sequelize": "^7.1.2",
-    "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "express-handlebars": "^6.0.2",
-    "express-session": "^1.17.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.14.0"
+    "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "handlebars": "^4.7.3",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.5"
   }
 }
